Fixed application/controller and application/view classes.