@@ -1,16 +1,16 @@
-package org.joelson.mattias.turfgame.application.controller;
+package org.joelson.turf.application.controller;
 
 import jakarta.persistence.PersistenceException;
-import org.joelson.mattias.turfgame.apiv4.Zone;
-import org.joelson.mattias.turfgame.apiv4.Zones;
-import org.joelson.mattias.turfgame.application.db.DatabaseEntityManager;
-import org.joelson.mattias.turfgame.application.model.ApplicationData;
-import org.joelson.mattias.turfgame.application.model.MunicipalityData;
-import org.joelson.mattias.turfgame.application.model.ZoneData;
-import org.joelson.mattias.turfgame.application.view.ApplicationUI;
-import org.joelson.mattias.turfgame.lundkvist.Municipality;
-import org.joelson.mattias.turfgame.warded.TakenZones;
-import org.joelson.mattias.turfgame.zundin.Today;
+import org.joelson.turf.application.db.DatabaseEntityManager;
+import org.joelson.turf.application.model.ApplicationData;
+import org.joelson.turf.application.model.MunicipalityData;
+import org.joelson.turf.application.model.ZoneData;
+import org.joelson.turf.application.view.ApplicationUI;
+import org.joelson.turf.lundkvist.Municipality;
+import org.joelson.turf.turfgame.apiv4.Zone;
+import org.joelson.turf.turfgame.apiv4.Zones;
+import org.joelson.turf.warded.TakenZones;
+import org.joelson.turf.zundin.Today;
 
 import java.io.IOException;
 import java.nio.file.Files;
@@ -25,38 +25,44 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 public class ApplicationActions {
-    
+
     private ApplicationUI applicationUI;
-    private ApplicationData applicationData;
-    
+    private final ApplicationData applicationData;
+
     public ApplicationActions(ApplicationData applicationData) {
         this.applicationData = applicationData;
     }
-    
-    public void setApplicationUI(ApplicationUI applicationUI) {
-        this.applicationUI = applicationUI;
+
+    private static void addUserToSet(Set<String> usernames, String username) {
+        if (!username.isEmpty()) {
+            usernames.add(username);
+        }
     }
-    
+
     ApplicationData getApplicationData() {
         return applicationData;
     }
-    
+
     ApplicationUI getApplicationUI() {
         return applicationUI;
     }
-    
+
+    public void setApplicationUI(ApplicationUI applicationUI) {
+        this.applicationUI = applicationUI;
+    }
+
     public void closeApplication() {
         applicationData.closeDatabase();
         applicationUI.dispose();
         System.exit(0);
     }
-    
+
     public Void readZones() throws IOException {
         List<Zone> zones = Zones.readAllZones();
         applicationData.getZones().updateZones(Instant.now().truncatedTo(ChronoUnit.SECONDS), zones);
         return null;
     }
-    
+
     public Void readZonesFromFile(Path zonesFile, Instant instant) throws IOException {
         List<Zone> zones = Zones.fromJSON(Files.readString(zonesFile));
         applicationData.getZones().updateZones(instant.truncatedTo(ChronoUnit.SECONDS), zones);
@@ -69,8 +75,7 @@ public class ApplicationActions {
         Map<String, Boolean> zoneMap = Municipality.fromHTML(file);
         Set<String> zoneNames = zoneMap.keySet();
         List<ZoneData> zones = applicationData.getZones().getZones().stream()
-                .filter(zoneData -> zoneNames.contains(zoneData.getName()))
-                .collect(Collectors.toList());
+                .filter(zoneData -> zoneNames.contains(zoneData.getName())).toList();
         MunicipalityData municipality = new MunicipalityData(zones.get(0).getRegion(), name, zones);
         applicationData.getMunicipalities().updateMunicipality(municipality);
         return null;
@@ -85,12 +90,6 @@ public class ApplicationActions {
         applicationData.getUsers().updateUsers(usernames);
         applicationData.getVisits().updateVisits(today);
         return null;
-    }
-
-    private static void addUserToSet(Set<String> usernames, String username) {
-        if (!username.isEmpty()) {
-            usernames.add(username);
-        }
     }
 
     public Void readWardedFromFile(Path wardedFile) throws IOException {
@@ -112,18 +111,18 @@ public class ApplicationActions {
                 DatabaseEntityManager.createPersistancePropertyMap(directoryPath, false, true));
         return null;
     }
-    
+
     public void closeDatabase() {
         applicationData.closeDatabase();
         applicationUI.setStatus(applicationData.getStatus());
     }
-    
+
     public Void importDatabase(Path loadFile, Path directoryPath) throws SQLException {
         applicationData.importDatabase(loadFile, DatabaseEntityManager.PERSISTANCE_NAME, directoryPath,
                 DatabaseEntityManager.createPersistancePropertyMap(directoryPath, false, false));
         return null;
     }
-    
+
     public Void exportDatabase(Path saveFile) throws SQLException {
         applicationData.exportDatabase(saveFile);
         return null;
