@@ -1,24 +1,34 @@
-package org.joelson.mattias.turfgame.application.view;
+package org.joelson.turf.application.view;
 
-import org.joelson.mattias.turfgame.application.model.MunicipalityData;
+import org.joelson.turf.application.model.MunicipalityData;
 
+import javax.swing.table.AbstractTableModel;
+import java.io.Serial;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
-import javax.swing.table.AbstractTableModel;
 
-public class MunicipalityTableModel  extends AbstractTableModel {
+public class MunicipalityTableModel extends AbstractTableModel {
 
     private static final String[] COLUMN_NAMES = { "Country", "Region", "Municipality", "Zones" };
     private static final Class<?>[] COLUMN_CLASSES = { String.class, String.class, String.class, Integer.class };
+    @Serial
     private static final long serialVersionUID = 1L;
 
     private final ArrayList<MunicipalityData> municipalities;
 
     public MunicipalityTableModel(List<MunicipalityData> municipalities) {
         this.municipalities = new ArrayList<>(municipalities);
-        this.municipalities.sort((m1, m2) -> sortMunicipalities(m1, m2));
+        this.municipalities.sort(MunicipalityTableModel::sortMunicipalities);
+    }
+
+    private static int sortMunicipalities(MunicipalityData m1, MunicipalityData m2) {
+        int cmpRegion = RegionTableModel.compareRegions(m1.getRegion(), m2.getRegion());
+        if (cmpRegion != 0) {
+            return cmpRegion;
+        }
+        int cmpName = m1.getName().compareTo(m2.getName());
+        return (cmpName != 0) ? cmpName : -1;
     }
 
     @Override
@@ -34,18 +44,13 @@ public class MunicipalityTableModel  extends AbstractTableModel {
     @Override
     public Object getValueAt(int rowIndex, int columnIndex) {
         MunicipalityData municipality = municipalities.get(rowIndex);
-        switch(columnIndex) {
-            case 0:
-                return municipality.getRegion().getCountry();
-            case 1:
-                return municipality.getRegion().getName();
-            case 2:
-                return municipality.getName();
-            case 3:
-                return municipality.getZones().size();
-            default:
-                throw new IllegalArgumentException("Invalid columnIndex " + columnIndex);
-        }
+        return switch (columnIndex) {
+            case 0 -> municipality.getRegion().getCountry();
+            case 1 -> municipality.getRegion().getName();
+            case 2 -> municipality.getName();
+            case 3 -> municipality.getZones().size();
+            default -> throw new IllegalArgumentException("Invalid columnIndex " + columnIndex);
+        };
     }
 
     @Override
@@ -58,18 +63,7 @@ public class MunicipalityTableModel  extends AbstractTableModel {
         return COLUMN_CLASSES[columnIndex];
     }
 
-    private static int sortMunicipalities(MunicipalityData m1, MunicipalityData m2) {
-        int cmpRegion = RegionTableModel.compareRegions(m1.getRegion(), m2.getRegion());
-        if (cmpRegion != 0) {
-            return cmpRegion;
-        }
-        int cmpName = m1.getName().compareTo(m2.getName());
-        return (cmpName != 0) ? cmpName : -1;
-    }
-
     public List<MunicipalityData> getMunicipalities(int[] selectedIndices) {
-        return Arrays.stream(selectedIndices)
-                .mapToObj(municipalities::get)
-                .collect(Collectors.toList());
+        return Arrays.stream(selectedIndices).mapToObj(municipalities::get).toList();
     }
 }
